--- a/source/renderer/app/components/wallet/WalletTokenSendConfirmationDialog.scss
+++ b/source/renderer/app/components/wallet/WalletTokenSendConfirmationDialog.scss
@@ -94,9 +94,10 @@
       border-left: 1px solid var(--theme-transactions-list-item-details-color);
       height: 39px;
       margin-left: 5px;
-      margin-top: 8px;
+      margin-top: -45px;
       opacity: 0.3;
-      position: absolute;
+      position: relative;
+      top: 45px;
       width: 6px;
     }
 
