--- a/source/renderer/app/components/settings/categories/StakePoolsSettings.scss
+++ b/source/renderer/app/components/settings/categories/StakePoolsSettings.scss
@@ -79,8 +79,26 @@
   }
 }
 
-// :global {
-//   [data-tippy-root] {
-//     z-index: 10 !important;
-//   }
-// }
+@keyframes animateSavingResultLabel {
+  0% {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.savingResultLabel {
+  animation: animateSavingResultLabel 3s;
+  color: var(--theme-input-right-floating-text-success-color);
+  font-family: var(--font-regular);
+  font-size: 14px;
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  text-align: right;
+  top: 5px;
+}
