DDW-500 Implement design for native tokens - Wallet token send form - new updates for receiver fields

--- a/source/renderer/app/components/wallet/WalletTokenSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletTokenSendForm.scss
@@ -165,10 +165,6 @@
   }
 }
 
-.estimatedFeeInput {
-  padding-left: 18px;
-}
-
 .depositInput {
   .depositAdaTotal {
     color: var(--theme-input-right-floating-text-color);
@@ -187,6 +183,10 @@
   position: absolute;
   right: 20px;
   text-transform: uppercase;
+}
+
+.addNewReceiverButton {
+  width: 100%;
 }
 
 .buttonsContainer {
