--- a/source/renderer/app/components/wallet/WalletTokenSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletTokenSendForm.scss
@@ -185,6 +185,21 @@
   text-transform: uppercase;
 }
 
+.removeReceiverButton {
+  font-family: var(--font-semibold);
+  font-size: 10px;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+  line-height: 1.2;
+  height: 20px;
+  left: 83px;
+  position: absolute;
+  text-transform: uppercase;
+  top: 2px;
+  width: 61.5px;
+  z-index: 1;
+}
+
 .addNewReceiverButton {
   width: 100%;
 }
