--- a/source/renderer/app/components/wallet/WalletTokenSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletTokenSendForm.scss
@@ -160,6 +160,7 @@
   padding-left: 20px;
   position: absolute;
   right: 80px;
+  top: 31px;
 
   .clearAssetButton {
     background-color: var(
@@ -220,7 +221,7 @@
 }
 
 .addNewReceiverButton {
-  margin: 20px 0;
+  margin-bottom: 20px;
   width: 100%;
 }
 
