--- a/source/renderer/app/components/wallet/WalletTokenSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletTokenSendForm.scss
@@ -280,6 +280,12 @@
   }
 }
 
+.walletsDropdownWrapper {
+  .walletsDropdown {
+
+  }
+}
+
 :global {
   .WalletTokenSendForm_calculatingFeesContainer .WalletTokenSendForm_calculatingFeesSpinnerButton.WalletTokenSendForm_spinning:after {
     background-size: 12px !important;
@@ -287,5 +293,9 @@
     left: calc(50% - 6px) !important;
     top: calc(50% - 6px) !important;
     width: 12px !important;
+  }
+
+  .AmountInputSkin_total {
+    text-transform: initial !important;
   }
 }
