--- a/source/renderer/app/components/voting/voting-registration-wizard/VotingRegistrationStepsEnterPinCode.scss
+++ b/source/renderer/app/components/voting/voting-registration-wizard/VotingRegistrationStepsEnterPinCode.scss
@@ -1,10 +1,10 @@
 .votingRegistrationStepsEnterPinCodeWrapper {
   .content {
     .description {
-      color: var(--theme-voting-steps-description-color);
+      color: var(--theme-voting-registration-steps-description-color);
     }
     .reminder {
-      color: var(--theme-voting-steps-warning-messages-font-color);
+      color: var(--theme-voting-registration-steps-warning-messages-font-color);
       span > span {
         font-family: var(--font-medium);
         font-weight: bold;
@@ -17,7 +17,9 @@
       margin-top: 25px;
       text-align: center;
       p {
-        color: var(--theme-voting-steps-description-highlighted-color);
+        color: var(
+          --theme-voting-registration-steps-description-highlighted-color
+        );
         font-family: var(--font-medium);
         font-weight: 500;
       }
