--- a/source/renderer/app/components/voting/VotingRegistrationDialog.scss
+++ b/source/renderer/app/components/voting/VotingRegistrationDialog.scss
@@ -29,7 +29,9 @@
     width: 450px;
 
     .stepIndicatorLabel {
-      color: var(--theme-voting-steps-activation-steps-indicator-color);
+      color: var(
+        --theme-voting-registration-steps-activation-steps-indicator-color
+      );
       font-family: var(--font-medium);
       font-size: 12px;
       font-weight: 500;
