DDW-500 Implement design for native tokens - Wallet token send form - fixing dropdown field position for native tokens

--- a/source/renderer/app/components/wallet/WalletTokenSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletTokenSendForm.scss
@@ -192,7 +192,7 @@
 }
 
 .separator {
-  background: var(--theme-bordered-box-border);
+  background: var(--rp-input-border-color);
   height: 20px;
   left: 20px;
   position: relative;
@@ -308,6 +308,12 @@
 
       .SimpleSelect_selectInput.SelectOverrides_selectInput .WalletsDropdownOption_detail {
         display: none !important;
+      }
+
+      .OptionsOverrides_options {
+        width: 289px !important;
+        left: auto !important;
+        right: 50px !important;
       }
     }
   }
