--- a/source/renderer/app/components/staking/stake-pools/StakePools.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePools.scss
@@ -64,6 +64,9 @@
     margin-left: 4px;
     opacity: 0.6;
     width: 10px;
+    g {
+      fill: var(--theme-staking-stake-pools-title-color);
+    }
   }
   .tinySpinner {
     display: inline-block;
@@ -73,6 +76,9 @@
       animation: rotating-spinner 1.2s linear infinite;
       height: 10px;
       width: 10px;
+      circle {
+        stroke: var(--theme-staking-stake-pools-title-color);
+      }
     }
   }
 
