--- a/source/renderer/app/components/wallet/WalletTokenSendConfirmationDialog.scss
+++ b/source/renderer/app/components/wallet/WalletTokenSendConfirmationDialog.scss
@@ -15,13 +15,19 @@
     text-transform: uppercase;
   }
 
-  .addressToLabelWrapper {
-    margin-bottom: 20px;
-  }
-
   .addressToLabel {
     font-size: 16px;
     line-height: 1.38;
+  }
+
+  .addressFrom {
+    font-family: var(--font-light);
+    line-height: 1.38;
+    margin-bottom: 5px;
+    margin-top: 6px;
+    user-select: text;
+    word-break: break-all;
+    word-wrap: break-word;
   }
 
   .addressTo {
@@ -61,7 +67,7 @@
   .receiverRow {
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
+    margin-top: 15px;
 
     .receiverRowItem {
       align-items: flex-start;
@@ -82,6 +88,10 @@
         width: 100%;
       }
     }
+  }
+
+  .feesWrapper {
+    margin-top: 15px;
   }
 
   .assetsWrapper {
@@ -107,6 +117,10 @@
       justify-content: space-between;
       padding: 5px 0 5px 20px;
       width: 100%;
+
+      h3 {
+        font-family: var(--font-light);
+      }
     }
   }
 
