DDW-500 Implement design for native tokens - fixing ui issues, flow issues, prettier issues

--- a/source/renderer/app/components/wallet/WalletTokenSendConfirmationDialog.scss
+++ b/source/renderer/app/components/wallet/WalletTokenSendConfirmationDialog.scss
@@ -131,10 +131,9 @@
     display: flex;
     flex-direction: row;
     height: 21px;
-    justify-content: center;
-    max-width: 140px;
+    justify-content: flex-end;
+    max-width: 250px;
     padding: 3px 9px;
-    width: 100%;
 
     .amountLabel,
     .feesLabel {
