--- a/source/renderer/app/components/wallet/WalletTokenSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletTokenSendForm.scss
@@ -24,7 +24,7 @@
   }
 
   .walletTokenSendForm {
-    padding-right: 10px;
+    padding: 0 10px;
 
     .walletTokenSendFormContainer {
       display: flex;
@@ -47,6 +47,17 @@
       display: flex;
       flex-direction: column;
       width: 100%;
+    }
+  }
+}
+
+.estimatedFeeInput {
+  input {
+    font-family: var(--font-regular);
+    pointer-events: none;
+
+    &::-webkit-input-placeholder {
+      font-family: var(--font-regular);
     }
   }
 }
@@ -89,7 +100,7 @@
 
     .clearReceiverButton {
       background-color: var(
-        --theme-staking-stake-pools-search-clear-button-background-color
+          --theme-staking-stake-pools-search-clear-button-background-color
       );
       border-radius: 3px;
       cursor: pointer;
@@ -98,7 +109,7 @@
 
       &:hover {
         background-color: var(
-          --theme-staking-stake-pools-search-clear-button-hover-background-color
+            --theme-staking-stake-pools-search-clear-button-hover-background-color
         );
       }
 
@@ -164,7 +175,7 @@
 
   .clearAssetButton {
     background-color: var(
-      --theme-staking-stake-pools-search-clear-button-background-color
+        --theme-staking-stake-pools-search-clear-button-background-color
     );
     border-radius: 3px;
     cursor: pointer;
@@ -173,7 +184,7 @@
 
     &:hover {
       background-color: var(
-        --theme-staking-stake-pools-search-clear-button-hover-background-color
+          --theme-staking-stake-pools-search-clear-button-hover-background-color
       );
     }
 
@@ -211,7 +222,7 @@
 
   .calculatingFeesSpinnerButton {
     background-color: var(
-      --theme-staking-stake-pools-search-clear-button-background-color
+        --theme-staking-stake-pools-search-clear-button-background-color
     );
     border-radius: 3px;
     bottom: 5px;
@@ -222,7 +233,7 @@
 
     &:hover {
       background-color: var(
-        --theme-staking-stake-pools-search-clear-button-hover-background-color
+          --theme-staking-stake-pools-search-clear-button-hover-background-color
       );
     }
 
@@ -240,7 +251,7 @@
     }
 
     &.spinning {
-      @include loading-spinner('../../assets/images/spinner-dark.svg');
+      @include loading-spinner('../../assets/images/spinner-dark-fees.svg');
     }
   }
 }
@@ -303,13 +314,13 @@
 
     :global {
       .SimpleSelect_selectInput.SelectOverrides_selectInput
-        .WalletsDropdownOption_selected
-        .WalletsDropdownOption_topRow {
+      .WalletsDropdownOption_selected
+      .WalletsDropdownOption_topRow {
         width: 50px !important;
       }
 
       .SimpleSelect_selectInput.SelectOverrides_selectInput
-        .WalletsDropdownOption_detail {
+      .WalletsDropdownOption_detail {
         display: none !important;
       }
 
@@ -328,7 +339,7 @@
 
 :global {
   .WalletTokenSendForm_calculatingFeesContainer
-    .WalletTokenSendForm_calculatingFeesSpinnerButton.WalletTokenSendForm_spinning:after {
+  .WalletTokenSendForm_calculatingFeesSpinnerButton.WalletTokenSendForm_spinning:after {
     background-size: 12px !important;
     height: 12px !important;
     left: calc(50% - 6px) !important;
