--- a/source/renderer/app/components/wallet/summary/TokensWalletSummary.scss
+++ b/source/renderer/app/components/wallet/summary/TokensWalletSummary.scss
@@ -28,9 +28,7 @@
 
     .nativeTokenRightContainer {
       .nativeTokenSendButton {
-        background-color: var(--theme-report-issue-button-background-color);
         border-radius: 3px;
-        color: var(--theme-report-issue-connecting-text-color);
         cursor: pointer;
         font-size: 11px;
         font-weight: bold;
@@ -67,7 +65,7 @@
   font-size: 16px;
   margin-bottom: -10px;
   opacity: 0.5;
-  padding: 20px 20px 0 40px;
+  padding: 0 20px 0 40px;
 }
 
 .walletName {
