--- a/source/renderer/app/components/wallet/transactions/Transaction.scss
+++ b/source/renderer/app/components/wallet/transactions/Transaction.scss
@@ -82,6 +82,11 @@
   letter-spacing: 1px;
   margin-left: auto;
   user-select: text;
+
+  span {
+    padding-left: 5px;
+    text-transform: uppercase;
+  }
 }
 
 .pendingLabel,
@@ -170,7 +175,7 @@
 
   .addressRow,
   .explorerLinkRow {
-    padding-bottom: 6px;
+    padding-bottom: 5px;
   }
 
   .addressRow,
@@ -201,7 +206,7 @@
       font-family: var(--font-mono);
       letter-spacing: 0.5px;
       line-height: 1.4;
-      margin-bottom: 2px;
+      margin-bottom: 3px;
     }
 
     &.explorerLink {
@@ -243,7 +248,7 @@
 .receiverRow {
   display: flex;
   flex-direction: column;
-  margin-top: 10px;
+  margin-top: 15px;
 
   .receiverRowItem {
     align-items: flex-start;
@@ -326,6 +331,10 @@
     justify-content: space-between;
     padding: 3px 0 3px 20px;
     width: 100%;
+
+    &:last-child {
+      padding: 3px 0 0 20px;
+    }
   }
 }
 
@@ -335,10 +344,9 @@
   display: flex;
   flex-direction: row;
   height: 21px;
-  justify-content: center;
-  max-width: 130px;
+  justify-content: flex-end;
+  max-width: 250px;
   padding: 3px 9px;
-  width: 100%;
 
   .amountLabel,
   .feesLabel {
@@ -367,10 +375,11 @@
 
 :global {
   .SimpleLink_root.SimpleLink_underlined {
-    border-bottom: none !important;
+    border-bottom: none;
 
     &:hover {
-      border-bottom: 1px solid var(--rp-link-color) !important;
+      border-bottom: 1px solid var(--rp-link-color);
+      margin-bottom: 2px;
     }
   }
 }
