DDW-500 Implement design for native tokens - fixing form tokens rendering

--- a/source/renderer/app/components/wallet/WalletTokenSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletTokenSendForm.scss
@@ -274,7 +274,7 @@
   left: 75px;
   letter-spacing: 0.5px;
   line-height: 1.2;
-  position: absolute;
+  position: absolute !important;
   text-transform: uppercase;
   top: 2px;
   width: 61.5px;
