[DDW-481] Switching SMASH servers (#2259)
* [DDW-481] Basic UI

* [DDW-481] CHANGELOG

* [DDW-481] Input UI and validation

* [DDW-481] API init

* [DDW-481] Api progress and cardano wallet update

* [DDW-481] API and Store handling progress

* [DDW-481] Api, Store and changes handling

* [DDW-481] Api, Store and changes handling progress

* [DDW-481] Error handling and UI progress

* [DDW-481] Smash Server in the Stake Pools list

* [DDW-481] Translation manager

* [DDW-481] Flow and Lint issues

* [DDW-481] Fix error

* [DDW-481] General improvements

* [DDW-481] Disable wallet import - enabled for testing

* [DDW-481] Translation manager

* [DDW-481] Text and styling adjustments

* [DDW-481] Japanese translation

* [DDW-481] Missing Japanese character

* [DDW-481] Build without AdaPools for testing purposes

* [DDW-481] Add back AddPools SMASH server

* [DDW-481] Fix flow issues

* [DDW-481] Update cardano wallet

* [DDW-481] Flow and Lint errors

* [DDW-481] Input buttons

* [DDW-481] Input logic progress

* [DDW-481] Input logic progress

* [DDW-481] Error logic progress

* [DDW-481] Styling adjustments

* [DDW-481] Logic progress

* [DDW-481] Logic progress - working

* [DDW-481] Flow and Lint issues

* [DDW-481] Adjustments

* [DDW-481] Adjustments

* [DDW-481] Logic improvements

* [DDW-481] Flow and Lint issues

* [DDW-481] Adjustments

* [DDW-481] Adjustments

* [DDW-481] Adds AdaPools back to the list of known servers

* [DDW-481] Updates CHANGELOG

* [DDW-481] Disable screen when it is syncing

* [DDW-481] Adjustments

* [DDW-481] Styling adjustment

* [DDW-481] Simplify logic

* [DDW-481] Improve Successfuly Update message

* [DDW-481] Minor improvement

* [DDW-481] Prevent FTP urls

* [DDW-481] Adjustments

* [DDW-481] Adjustments

* [DDW-481] Fix URL error and add Direct and None options

* [DDW-481] smashUrl from the Cardano Launcher

* [DDW-481] Sma

--- a/source/renderer/app/components/widgets/forms/InlineEditingInput.scss
+++ b/source/renderer/app/components/widgets/forms/InlineEditingInput.scss
@@ -1,3 +1,5 @@
+@import '../../../themes/mixins/error-message';
+
 .component {
   margin-bottom: 20px;
   position: relative;
@@ -8,6 +10,12 @@
     color: var(--theme-input-text-color);
   }
 
+  &:hover {
+    .editButton {
+      opacity: 1;
+    }
+  }
+
   &.inactive {
     &:hover {
       input {
@@ -16,19 +24,126 @@
     }
   }
 
-  .button {
-    bottom: 14px;
-    color: var(--theme-label-button-color);
-    cursor: pointer;
-    font-family: var(--font-light);
-    font-size: 16px;
-    line-height: 1.38;
-    opacity: 0.5;
+  &.readOnly {
+    input:read-only {
+      background: var(--rp-input-bg-color-disabled);
+      border: none;
+    }
+    &:hover {
+      input {
+        cursor: text;
+      }
+    }
+  }
+
+  &.oneButton {
+    :global {
+      input {
+        padding-right: 49px;
+      }
+    }
+  }
+
+  &.twoButtons {
+    :global {
+      input {
+        padding-right: 88px;
+      }
+    }
+  }
+
+  .buttonsWrapper {
+    cursor: text;
+    height: 28px;
+    margin-right: 11px;
     position: absolute;
-    right: 22px;
-    text-transform: lowercase;
+    right: 1px;
+    top: 42px;
+  }
+
+  .button {
+    background-color: var(--theme-button-flat-background-color);
+    border-radius: 3px;
+    cursor: pointer;
+    height: 28px;
+    width: 28px;
+    &:hover {
+      background-color: var(--theme-button-flat-background-color-hover);
+    }
+    &:active {
+      background-color: var(--theme-button-flat-background-color-active);
+    }
+    .icon {
+      svg {
+        height: 12px;
+        position: relative;
+        top: 1px;
+        width: 12px;
+      }
+    }
+  }
+  .editButton {
+    opacity: 0;
+    transition: opacity 0.25s;
     &:hover {
       opacity: 1;
+    }
+    .icon {
+      svg path {
+        stroke: var(--theme-button-flat-text-color);
+      }
+    }
+  }
+  .cancelButton {
+    .icon {
+      svg {
+        height: 10px;
+        width: 10px;
+        g {
+          fill: var(--theme-button-flat-text-color);
+        }
+      }
+    }
+  }
+  .okButton {
+    background-color: var(--theme-button-primary-background-color);
+    margin-left: 11px;
+    &:hover {
+      background-color: var(--theme-button-primary-background-color-hover);
+    }
+    &:active {
+      background-color: var(--theme-button-primary-background-color-active);
+    }
+    .icon {
+      svg path {
+        stroke: var(--theme-button-primary-text-color);
+      }
+    }
+  }
+  .submittingButton {
+    &:hover {
+      background-color: var(--theme-button-flat-background-color);
+      cursor: default;
+    }
+    &:active {
+      background-color: var(--theme-button-flat-background-color);
+    }
+    .icon {
+      animation: spinner 1.5s linear;
+      animation-iteration-count: infinite;
+      display: inline-block;
+      svg g {
+        stroke: var(--theme-button-flat-text-color);
+      }
+    }
+  }
+
+  @keyframes spinner {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
     }
   }
 
@@ -55,4 +170,16 @@
     text-align: right;
     top: 5px;
   }
+
+  :global {
+    .SimpleFormField_label {
+      display: inline-block;
+    }
+  }
+}
+
+.errorMessage {
+  @include error-message;
+  margin-top: 20px;
+  text-align: center;
 }
