--- a/source/renderer/app/components/staking/stake-pools/StakePools.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePools.scss
@@ -27,9 +27,67 @@
 
   h2 {
     color: var(--theme-staking-stake-pools-title-color);
+    display: flex;
+    justify-content: space-between;
     line-height: 1.38;
     margin: 20px 0 10px;
-    opacity: 0.5;
-    padding-left: 20px;
+    padding: 0 20px;
+  }
+
+  .leftContent {
+    > span:first-child {
+      opacity: 0.5;
+    }
+  }
+
+  .smashSettings {
+    cursor: pointer;
+    display: flex;
+    font-size: 16px;
+    > span:first-child {
+      color: var(--theme-staking-stake-pools-title-color);
+      display: inline-block;
+      max-width: 570px;
+      opacity: 0.5;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      vertical-align: top;
+      white-space: nowrap;
+    }
+    &:hover {
+      svg {
+        opacity: 1;
+      }
+    }
+  }
+  .smashSettingsIcon svg {
+    margin-left: 4px;
+    opacity: 0.6;
+    width: 10px;
+    g {
+      fill: var(--theme-staking-stake-pools-title-color);
+    }
+  }
+  .tinySpinner {
+    display: inline-block;
+    margin: -5px 0 0 6px;
+    vertical-align: middle;
+    svg {
+      animation: rotating-spinner 1.2s linear infinite;
+      height: 10px;
+      width: 10px;
+      circle {
+        stroke: var(--theme-staking-stake-pools-title-color);
+      }
+    }
+  }
+
+  @keyframes rotating-spinner {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
   }
 }
