--- a/source/renderer/app/components/wallet/transactions/Transaction.scss
+++ b/source/renderer/app/components/wallet/transactions/Transaction.scss
@@ -312,6 +312,7 @@
 
   .assetsSeparator {
     border-bottom: 1px solid var(--theme-transactions-list-item-details-color);
+    border-bottom-left-radius: 2px;
     border-left: 1px solid var(--theme-transactions-list-item-details-color);
     display: none;
     height: 32px;
