DDW-500 Implement design for native tokens - fixing transaction screen ui issues

--- a/source/renderer/app/components/wallet/transactions/Transaction.scss
+++ b/source/renderer/app/components/wallet/transactions/Transaction.scss
@@ -294,6 +294,11 @@
 
 .transactionFeeValue {
   @include error-message;
+  font-family: var(--font-medium);
+
+  span {
+    font-family: var(--font-light);
+  }
 }
 
 .transactionMetadata {
