DDW-500 Implement design for native tokens - fixing transaction screen ui issues

--- a/source/renderer/app/components/wallet/WalletTokenSendForm.scss
+++ b/source/renderer/app/components/wallet/WalletTokenSendForm.scss
@@ -90,7 +90,7 @@
   }
 
   .clearReceiverContainer {
-    bottom: 0.5px;
+    bottom: 0;
     display: flex;
     height: 48px;
     line-height: 48px;
