[DDW-557] Fix ITN rewards redemption

--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
@@ -23,6 +23,12 @@
 
   .recoveryPhrase {
     margin-bottom: 20px;
+
+    :global {
+      .SimpleOptions_option {
+        padding: 14px 20px;
+      }
+    }
   }
 
   .walletsDropdownWrapper {
