[DDW-541] Adds HW check, Adds Byron check, Improves styling

--- a/source/renderer/app/components/voting/VotingRegistrationDialog.scss
+++ b/source/renderer/app/components/voting/VotingRegistrationDialog.scss
@@ -1,14 +1,21 @@
 @import './votingConfig';
 
 .component {
+  text-align: center;
+
   :global {
     .Dialog_title {
       margin-bottom: 0;
     }
+
+    .Dialog_contentWrapper > .Dialog_content {
+      margin-bottom: 0;
+    }
+
+    .Dialog_actions {
+      display: none;
+    }
   }
-  overflow-y: overlay;
-  padding: 20px;
-  text-align: center;
 
   .heading {
     @extend %accentText;
